2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: fixed
	'Bug 442160 - Double-click on scrollbar down arrow of code completion
	menu results in selection'.

2008-11-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Make "Tab" key
	always complete item even if selection is disabled.

2008-11-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionDataList.cs: Moved
	interface to another file.

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: Remove
	dead code, and hide update footer when hiding list.

	* Makefile.am:
	* MonoDevelop.Projects.Gui.mdp: Updated.

	* MonoDevelop.Projects.Gui.Completion/MutableCompletionDataList.cs:
	Implement a mutable completion list that flags itself based on the
	ProjectDomService.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.addin.xml: Bump MD version.

2008-11-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs/ItemOptionsPanel.cs: Added property
	for getting the list of configuration objects being edited in the
	dialog (they are a copy of the original configurations).

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/RuntimeOptionsPanel.cs:
	Assign the selected clr version to all configurations (The ClrVersion
	setter of DotNetProject does it, but configurations are replaced by
	the copies being edited in the dialog).

2008-10-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ParameterInformationWindowManager.cs:
	fixed 'Bug 436669 - function hints (tooltip) hides typing when typing
	a multi-line function'.

2008-10-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/RuntimeOptionsPanel.cs:
	Rename Moonlight 1.1 to Moonlight 2.0.
